--- a/index-navbar.html
+++ b/index-navbar.html
@@ -28,7 +28,7 @@
     <![endif]-->
 
 
-    <header class="navigation" role="banner">
+    <header class="navigation gradient-overlay" role="banner">
       <section class="navigation-wrapper-top">
         <a href="javascript:void(0)" class="logo">
           <img alt="AAPA Conference 2018" src="img/logo_small.svg">
