added sponser trail version

--- a/index.html
+++ b/index.html
@@ -494,6 +494,35 @@
    <!-- END // Events Section #2 -->
 
 
+
+<section class="small-section" >
+  
+
+<div class='sponsorsFooter'>
+  <h1 id="sponsorTitle" class="base-headline" data-default-title="<strong>Our Sponsors</strong>">
+    <strong>Our Sponsors</strong>
+  </h1>
+  <ul>
+    <span data-group-title="Gold Sponsor">
+      <li><img src="http://placehold.it/140x80/ccc/BBB&text=Company" ></li>
+    </span>
+    <span data-group-title="Silver Sponsors">
+      <li><img src="http://placehold.it/140x80/ccc/BBB&text=Company" ></li>
+      <li><img src="http://placehold.it/140x80/ccc/BBB&text=Company" ></li>
+    </span>
+    <span data-group-title="Bronze Sponsors">
+      <li><img src="http://placehold.it/140x80/ccc/BBB&text=Company" ></li>
+      <li><img src="http://placehold.it/140x80/ccc/BBB&text=Company" ></li>
+      <li><img src="http://placehold.it/140x80/ccc/BBB&text=Company" ></li>
+    </span>
+  </ul>
+</div>
+
+</section>
+
+
+
+
   </div>
   <!-- END // Page Wrap -->
 
