sponsors clean up

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 
 
     <!-- Events Section #2 -->
-    <section class="small-section special-events bg-secondary">
+    <section class="page-section special-events bg-secondary">
       <div class="section-title">
         <h1>Special Events</h1>
       </div>
@@ -495,7 +495,7 @@
 
 
 
-<section class="small-section" >
+<section class="page-section" >
   
 
 <div class='sponsorsFooter'>
@@ -504,16 +504,16 @@
   </h1>
   <ul>
     <span data-group-title="Gold Sponsor">
-      <li><img src="http://placehold.it/140x80/ccc/BBB&text=Company" ></li>
+      <li><img src="img/logos/fake-sponser.png" ></li>
     </span>
     <span data-group-title="Silver Sponsors">
-      <li><img src="http://placehold.it/140x80/ccc/BBB&text=Company" ></li>
-      <li><img src="http://placehold.it/140x80/ccc/BBB&text=Company" ></li>
+      <li><img src="img/logos/fake-sponser.png" ></li>
+      <li><img src="img/logos/fake-sponser.png" ></li>
     </span>
     <span data-group-title="Bronze Sponsors">
-      <li><img src="http://placehold.it/140x80/ccc/BBB&text=Company" ></li>
-      <li><img src="http://placehold.it/140x80/ccc/BBB&text=Company" ></li>
-      <li><img src="http://placehold.it/140x80/ccc/BBB&text=Company" ></li>
+      <li><img src="img/logos/fake-sponser.png" ></li>
+      <li><img src="img/logos/fake-sponser.png" ></li>
+      <li><img src="img/logos/fake-sponser.png" ></li>
     </span>
   </ul>
 </div>
@@ -527,9 +527,9 @@
   <!-- END // Page Wrap -->
 
   <!-- JS -->
-<!--   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="dist/jquery-1.11.2.min.js"><\/script>')</script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<!--   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="dist/jquery-1.11.2.min.js"><\/script>')</script> -->
   <script type="text/javascript" src="dist/script.min.js"></script>
   <!-- CDN -->
   <!-- https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.6/SmoothScroll.js -->
