--- a/index.html
+++ b/index.html
@@ -527,9 +527,9 @@
   <!-- END // Page Wrap -->
 
   <!-- JS -->
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<!--   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="dist/jquery-1.11.2.min.js"><\/script>')</script> -->
+<!--   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="dist/jquery-1.11.2.min.js"><\/script>')</script>
   <script type="text/javascript" src="dist/script.min.js"></script>
   <!-- CDN -->
   <!-- https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.6/SmoothScroll.js -->
