--- a/index.html
+++ b/index.html
@@ -367,6 +367,22 @@
     <!-- END // Parallax CME -->
 
 
+
+<div class="cta-area">
+  <div class="container">
+
+      <div class="col-md-9">
+        <h2>Placeholder headline about CME & Events</h2>
+      </div>
+      <div class="col-md-3 text-right">
+        <a href="" class="btn btn-lg btn-color cta-btn">Search CME & Events</a>
+      </div>
+
+  </div>
+</div>
+
+
+
     <!-- Events Section #1 -->
     <section class="page-section" id="events">
       <div class="events">
@@ -527,17 +543,22 @@
   <!-- END // Page Wrap -->
 
   <!-- JS -->
+<script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+
 <!--   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="dist/jquery-1.11.2.min.js"><\/script>')</script>
+<!--   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="dist/jquery-1.11.2.min.js"><\/script>')</script> -->
   <script type="text/javascript" src="dist/script.min.js"></script>
   <!-- CDN -->
   <!-- https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.6/SmoothScroll.js -->
   <script>
   var myTabs = tabs({
-  el: '#tabs',
-  tabNavigationLinks: '.tabs-nav-item',
-  tabContentContainers: '.tab-content-item'
+    el: '#tabs',
+    tabNavigationLinks: '.tabs-nav-item',
+    tabContentContainers: '.tab-content-item'
   });
   myTabs.init();
   </script>
