--- a/index.html
+++ b/index.html
@@ -668,7 +668,8 @@
 
 
   <!-- JS -->
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.0.0.js"></script>
+<script src="https://code.jquery.com/jquery-migrate-3.0.0.js"></script>
   <!--   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="dist/jquery-1.11.2.min.js"><\/script>')</script> -->
   <script type="text/javascript" src="dist/script.min.js"></script>
