added container padding below 1200

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
     <div class="cta-area">
       <div class="container">
         <div class="col-md-9">
-          <h2>Placeholder headline about CME & Events</h2>
+          <h2>Headline about CME & Events</h2>
         </div>
         <div class="col-md-3 text-right">
           <a href="" class="btn btn-lg btn-color cta-btn">Search CME & Events</a>
