--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
           </ul>
 
           <div class="local-scroll">
-            <a href="#" class="btn btn-lg">See More</a>
+            <a href="#" class="btn btn-lg">More Info</a>
             <span class="hidden-xs">&nbsp;</span>
-            <a href="#" class="btn btn-lg">Play Reel</a>
+            <a href="#" class="btn btn-lg">Register</a>
           </div>
 
         </div>
