--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <div class="search-bar">
           <form role="search" lpformnum="1">
             <button class="search-button animate" type="submit" title="Start Search">
-            <i class="fa fa-search"></i>
+              <i class="fa fa-search"></i>
             </button>
             <input type="search" placeholder="Enter Search">
           </form>
@@ -431,6 +431,11 @@
         <div class="special-events__carousel--item">
           <a href="#" class="special-events__image">
             <img src="img/images/blog-1.jpg" alt="" />
+            <div class="special-events__overlay">
+              <button class="overlay-button">
+                <i class="fa fa-search"></i><br>View Event
+              </button>
+            </div>
           </a>
           <div class="special-events__content">
             <a href="#" class="base-headline">General Session</a>
@@ -442,6 +447,11 @@
         <div class="special-events__carousel--item">
           <a href="#" class="special-events__image">
             <img src="img/images/blog-2.jpg" alt="" />
+            <div class="special-events__overlay">
+              <button class="overlay-button">
+                <i class="fa fa-search"></i><br>View Event
+              </button>
+            </div>
           </a>
           <div class="special-events__content">
             <a href="#" class="base-headline">Cheers to 50 Years</a>
@@ -453,6 +463,11 @@
         <div class="special-events__carousel--item">
           <a href="#" class="special-events__image">
             <img src="img/images/blog-3.jpg" alt="" />
+            <div class="special-events__overlay">
+              <button class="overlay-button">
+                <i class="fa fa-search"></i><br>View Event
+              </button>
+            </div>
           </a>
           <div class="special-events__content">
             <a href="#" class="base-headline">The Future of PA Recertification</a>
@@ -464,6 +479,11 @@
         <div class="special-events__carousel--item">
           <a href="#" class="special-events__image">
             <img src="img/images/blog-4.png" alt="" />
+            <div class="special-events__overlay">
+              <button class="overlay-button">
+                <i class="fa fa-search"></i><br>View Event
+              </button>
+            </div>
           </a>
           <div class="special-events__content">
             <a href="#" class="base-headline">CHLM Symposium</a>
@@ -475,6 +495,11 @@
         <div class="special-events__carousel--item">
           <a href="#" class="special-events__image">
             <img src="img/images/blog-5.jpg" alt="" />
+            <div class="special-events__overlay">
+              <button class="overlay-button">
+                <i class="fa fa-search"></i><br>View Event
+              </button>
+            </div>
           </a>
           <div class="special-events__content">
             <a href="#" class="base-headline">Exhibit Hall</a>
@@ -603,17 +628,10 @@
     </ul>
   </nav>
 
-<!--   <div class="footer-social-links mb-110 mb-xs-60">
-    <a href="#" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
-    <a href="#" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a>
-    <a href="#" title="LinkedIn+" target="_blank"><i class="fa fa-linkedin"></i></a>
-    <a href="#" title="Instagram" target="_blank"><i class="fa fa-instagram"></i></a>
-    <a href="#" title="Youtube" target="_blank"><i class="fa fa-youtube"></i></a>
-    <a href="#" title="Snapchat" target="_blank"><i class="fa fa-snapchat-ghost"></i></a>
-  </div> -->
 
 
-  <div class="footer-social-links mb-110 mb-xs-60">
+
+  <div class="footer-social-links">
     <a href="#" title="Facebook" target="_blank">
       <svg viewBox="0 0 100 100" class="iconnn huddle-svg">
         <use xlink:href="#huddle"></use>
